# ordu

./: .gitignore  CMakeLists.txt  README.md  UNUSED.txt  UNUSED_CODE.txt  case_study.cpp  case_study.h  daORU.cpp  daORU.h  global.cpp  global.h  header.h  iPref.cpp  iPref.h  lp_user.cpp  lp_user.h  main.cpp  math_lib.h  math_lib_impl.h  param.cpp  param.h  point.h  qhull_user.h  qp_solver.h  qp_solver2.cpp  qp_solver2.h  qp_solver_impl.h  queryGen.cpp  queryGen.h  region.h  rentry.h  rnode.h  run_2020_9_15.txt  skyline.cpp  skyline.h  test.h  utils.cpp  utils.h  utk_math_lib.h  utk_math_lib_impl.h  (+4 more)
caseStudy_reproduce/: README.md  draw.py  result.txt
data/: user4d200_L2.txt  user4d200k.txt  user4d200withK.txt  user_ast_trb.txt  user_trb_pts.txt
lp_lib/: lp_lib.c  lp_lib.h  lp_matrix.c
lp_lib/bfp/: lp_BFP.h
quadProg_lib/: Array.hh  QuadProg++.cc
rtree_lib/: collection.cpp  collection.h  filemem.cpp  filemem.h  global.cpp  global.h  header.h  hypercube.cpp  hypercube.h  mem.h  param.cpp  param.h  point.h  rentry.cpp  rentry.h  rnode.cpp  rnode.h  rtree.cpp  rtree.h  tgs.cpp  tgs.h  virtualRNode.cpp  virtualRNode.h
